# vc64-emu

./: .gitignore  CAudio.h  CCIA1.cpp  CCIA1.h  CCIA2.cpp  CCIA2.h  CCIABase.cpp  CCIABase.h  CDisplay.cpp  CDisplay.h  CIACommon.h  CInput.cpp  CInput.h  CMakeLists.txt  CMemory.cpp  CMemory.h  CPLA.cpp  CPLA.h  CSID.h  CVICII.cpp  CVICII.h  README.md  build.sh  main.cpp  vc64.code-workspace
bios/: README_bios.md
emushared/: CBuffer.h  CMakeLists.txt  README.md  bitutils.h
emushared/include/: CBuffer.h  CLog.h  CSDLUtils.h  IMemory.h  bitutils.h
emushared/src/: CBuffer.cpp  CLog.cpp  CSDLUtils.cpp
test/: hover.prg  matrix.prg  rox.prg
v65xx/: CMOS65xx.cpp  CMOS65xx.h  CMakeLists.txt  IMemory.h  README.md
v65xx/include/: CMOS65xx.h  IMemory.h
v65xx/src/: CMOS65xx.cpp
v65xx/tests/: 6502_functional_test.lst  65C02_extended_opcodes_test.lst  README.md
vc64/: CAudio.cpp  CCIA1.cpp  CCIA2.cpp  CInput.cpp  CMakeLists.txt  CMemory.cpp  CMemory.h  CVICII.cpp  CVICII.h  debugflags.h  main.cpp
vc64/src/: CAudio.cpp  CAudio.h  CCIA.cpp  CCIA.h  CCIA1.cpp  CCIA1.h  CCIA2.cpp  CCIA2.h  CDisplay.cpp  CDisplay.h  CInput.cpp  CInput.h  CMemory.cpp  CMemory.h  CSID.cpp  CSID.h  CVICII.cpp  CVICII.h  globals.h  main.cpp
